@@ -1,3 +1,14 @@
+2006-01-10  Andreas Kupries <andreask@activestate.com>
+
+	* tie_rarray_comm.test: Disabled the gratuitous puts commands
+	  found in the tests. This unclutteres the output. This fixes the
+	  [SF Tcllib Bug 1316063].
+
+	* tie_file.tcl (Compact): Accepted patch by Anton Osennikov
+	  <wish2@users.sourceforge.net> for [SF Tcllib Patch
+	  1378556]. This fixes a bug in the configuration of the log file
+	  after compaction, on Windows.
+
 2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
